--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "docker": "^1.0.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
