--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "currency-symbol-map": "^5.1.0",
     "docker": "^1.0.0",
     "next": "12.2.3",
     "react": "18.2.0",
